--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -14,8 +12,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="ShopiQuik"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:hardwareAccelerated="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".AboutUs"
+            android:exported="false" />
         <activity
             android:name=".MoreActivity"
             android:exported="false" />
@@ -39,7 +41,7 @@
             android:exported="false" />
         <activity
             android:name=".SearchProduct"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Splash"
             android:exported="true">
